# Solana_task2

./: README.md
solana-task2/: Anchor.toml  Cargo.toml  UsersFARAB.configsolanaid.json  keypair.json
solana-task2/app/: create.html  gallary.html  index.html  marketplace.html  packs.html
solana-task2/app/js/: config.js  gallery.js  main.js  marketplace.js  nft.js  pack-manager.js  rarity-manager.js  wallet.js
solana-task2/app/styles/: rarity.css  style.css
solana-task2/programs/solana-task2/: Cargo.toml
solana-task2/programs/solana-task2/src/: lib.rs
