[package]
name = "solana-task2"
version = "0.1.0"
description = "Music NFT Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_task2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }  
anchor-spl = { version = "0.30.0", features = ["metadata"] }
mpl-token-metadata = { version = "4.1.2", features = ["serde"] }

